[project]
name = "naudio"
authors = [
  { name = "nousr", email = "discord@nousr.com" },
]
description = "A trainer for audio models."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "jax",
  "audio",
  "flax",
  "optax",
  "stable-audio",
  "generative-ai",
  "deep-learning",
  "neural-networks",
  "machine-learning",
]
license = { file = "LICENSE.md" }
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "jax",
  "flax",
  "jaxtyping",
  "beartype",
  "einops",
  "transformers",
  "librosa",
  "soundfile",
  "scipy",
  "orbax",
  "safetensors",
  "tensorboard"
]

[project.optional-dependencies]
dev = [
  "ruff==0.4.10",
  "setuptools-scm==8.1.0",
  "pre-commit==3.7.1", # remember to run `pre-commit install` after installing
]
all = [
  "naudio[dev]",
]

[project.scripts]
naudio = "naudio.trainer.cli:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "wheel"]

[tool.setuptools_scm]
write_to = "src/naudio/_version.py"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
include = ["naudio*"]
exclude = ["naudio.tests*"]

[tool.setuptools.package-data]
"*" = [
  "*.css",
  "*.json",
  "*.md",
  "*.txt",
]
"naudio.data" = [
  "*.ckpt",
  "*.pt",
  "*.pth",
  "*.safetensors",
]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["/usr/lib/*"]

[tool.ruff.lint]
ignore = [
  "E501", # line too long - will be fixed in format
  "F722", # jaxtyping forward annotation
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["src"]
known-first-party = ["naudio"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
exclude = [
  "src/naudio/_version.py", # generated by setuptools_scm
]

[tool.pyright]
include = ["src/**"]
exclude = ["/usr/lib/**"]
stubPath = "./typings"

[tool.tomlsort]
in_place = true
no_sort_tables = true
spaces_before_inline_comment = 1
spaces_indent_inline_array = 2
trailing_comma_inline_array = true
sort_first = [
  "project",
  "build-system",
  "tool.setuptools-scm",
  "tool.setuptools",
]
